# iAssistRecordingAnalysis

./: .gitignore  README.md  gaze.py  gaze_animated.py  motion.py  motion_categorization.py  pyproject.toml  requirements.txt  synchronicity.py
iAssistADL_analysis/: classifier.py  loaders.py  skeleton.py  tools.py
iAssistADL_analysis/notebooks/: Anaysis_1.ipynb
iAssistADL_analysis/pipelines/: report_data_completness.py
iAssistADL_analysis/scripts/: depth_reader2.py  depth_video_reader.py  depth_video_writer.py  display_skeleton.py  frequency_analysis.py  motion_categorization.py  motion_paint.py  pupil_time_offset_estimation.py  rename_subject.py  synchronicity.py
tests/: test_tools.py
